Update tablecharts and index.html

--- a/BARS/index.html
+++ b/BARS/index.html
@@ -30,25 +30,25 @@
                     <hr class="section-heading-spacer"></h1>
                     <div class="clearfix"></div>
 
-                    <p> Openness is key to fostering progress in science. BARS is a project aimed for open <strong>B</strong>enchm<strong>A</strong>rking for <strong>R</strong>ecommender <strong>S</strong>ystems, allowing better reproducibility and replicability of quantitative studies. The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems. In summary, BARS is built with the following key features:</p>
+                    <p> Openness is key to fostering progress in scientific research. <strong><font color="#EA3913">BARS</font></strong> is such a project aimed for open <strong><font color="#EA3913">B</font></strong>enchm<strong><font color="#EA3913">A</font></strong>rking for <strong><font color="#EA3913">R</font></strong>ecommender <strong><font color="#EA3913">S</font></strong>ystems, allowing better reproducibility and replicability of quantitative research results. The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems. In summary, BARS is built with the following key features:</p>
 
                     <ul> 
-                        <li> <strong>Open datasets</strong>: BARS collects a set of widely-used public datasets for recommendation research, and assign unique dataset IDs to track data partitions of each dataset. This allows to experiment with the datasets and share the results in a consistent way. 
+                        <li> <strong>Open datasets</strong>: BARS collects a set of widely-used public datasets for recommendation research, and assign unique dataset IDs to track different data splits of each dataset. This allows researchers to experiment with the datasets and share the results in a consistent way. 
                         </li>
 
-                        <li> <strong>Open source</strong>: BARS actively supports the open source principles and provides a list of open-source implementations of recommendation models. 
+                        <li> <strong>Open source</strong>: BARS actively supports the open source principles and provides a list of open-source libraries of popular recommendation models. 
                         </li>
 
-                        <li> <strong>Benchmarking pipeline</strong>: BARS standardizes the open benchmarking pipeline for reproducible recommender systems research to ensure transparency and availability of all artifacts produced at each investigative step. 
+                        <li> <strong>Benchmarking pipeline</strong>: BARS standardizes the open benchmarking pipeline for reproducible recommender systems research to ensure transparency and availability of all the artifacts produced along the process. 
                         </li>
 
-                        <li> <strong>SOTA results</strong>: BARS provides the most comprehensive benchmarking results to date, covering tens of SOTA models and tens of dataset partitions. These results could be easily reused for future research.
+                        <li> <strong>SOTA results</strong>: BARS serves the most comprehensive benchmarking results to date, covering tens of SOTA models and over ten dataset splits. These results could be easily reused for future research.
                         </li>
   
                         <li> <strong>Reproducing steps</strong>: The core of BARS is to ensure reproducibility of each benchmarking result through detailed description of reproducing steps, which allows anyone in the community to easily reproduce the results.
                         </li>
 
-                        <li> <strong>Maintainable by anyone</strong>: BARS is open to the community. Anyone can contribute new datasets, implement new models, update new benchmarking results, or revise existing numbers through a pull request on Github. The contributor will be marked honorably along with the contributions accordingly.
+                        <li> <strong>Strong maintainability</strong>: BARS is open to the community. Anyone can contribute new datasets, implement new models, update new benchmarking results, or revise existing numbers through a pull request on Github. The contributor will be marked honorably along with the contributions accordingly.
                         </li>
                     </ul>
                     <br>
@@ -59,7 +59,7 @@
                 <div class="text-center" style="font-size:16px">Figure: Open benchmarking pipeline</div>
             </div>
             <div class="col-lg-10 col-lg-offset-1">
-                <p>By establishing an open benchmarking standard, together with the freely available datasets, source code, and reproducing steps, we hope that the BARS project could benefit all researchers, practitioners, and educators in the community. Currently, the BARS benchmark covers the following two tasks:</p>
+                <p>By establishing an open benchmarking standard, together with the freely available datasets, source code, and reproducing steps, we hope that the BARS project could benefit all researchers, practitioners, and educators in the community. Currently, the BARS benchmarks cover the following two tasks:</p>
             </div>
         </div>
 
@@ -75,7 +75,7 @@
 </section>
 
 <footer>
-<div class="info"><p class="copyright">Towards Open Benchmarking for Recommender Systems<br>© 2021 BARS
+<div class="info"><p class="copyright">Towards Open Benchmarking for Recommender Systems<br>© 2021-2022 BARS
 	</p></div>
 </footer>
 </body></html>
