--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -38,10 +38,10 @@
             <p>Click-through rate (CTR) prediction (or user response prediction in general) is an important task in the ranking phase of recommender systems. The BARS project aims to build an open benchmark for CTR prediction, which consists of:</p>
 
             <ul>
-                <li><a href="./papers.html">A curated list of CTR prediction models</a> which have been tagged into different topics, such as feature-interactions, user-behavior-modeling, multi-task modeling, cross-domain modeling, AutoML, etc.</li>
-                <li><a href="https://github.com/openbenchmark/BARS/tree/master/ctr_prediction/datasets#benchmark-datasets" , target="_blank">A collection of public datasets for CTR prediction research</a>, and unique dataset IDs to track specific data partitions of each dataset.</li>
+                <li><a href="./papers.html">A curated list of CTR prediction models</a> which have been tagged into different topics, such as feature-interactions, behavior-sequence-modeling, multi-task learning, cross-domain modeling, AutoML, etc.</li>
+                <li><a href="https://github.com/openbenchmark/BARS/tree/master/ctr_prediction/datasets#benchmark-datasets" , target="_blank">A collection of public datasets for CTR prediction research</a>, and unique dataset IDs to track specific data splits of each dataset.</li>
                 <li><a href="https://github.com/xue-pai/FuxiCTR", target="_blank">An open-source library for CTR prediction</a> with stunning features in configurablity, tunablity, and reproduciblity.</li>
-                <li><a href="https://openbenchmark.github.io/ctr-prediction/leaderboard/criteo_x4_001.html", target="_blank">The most comprehensive benchmarking results</a> on tens of SOTA models and datasets. For each result, the detailed reproducing step is available along with the open-source benchmarking code.</li>
+                <li><a href="https://openbenchmark.github.io/ctr-prediction/leaderboard/criteo_x4_001.html", target="_blank">The most comprehensive benchmarking results</a> on tens of SOTA models and datasets. For each result, the detailed reproducing step is available along with the open-source benchmarking scripts.</li>
             </ul>
 
             <p>The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.</p>
