--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -36,8 +36,7 @@
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">BARS-Matching</h2>
             <p><strong>BARS is an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
-            <p>Recommender systems generally comprise two main phases, matching and ranking. Candidate item matching
-                is a matching task that is designed to efficiently retrieve hundreds of item candidates
+            <p>Recommender systems generally comprise two main stages, matching and ranking. As the first-stage task, candidate item matching is designed to efficiently retrieve hundreds of item candidates
                 out of the entire item corpus. Representative methods of candidate item matching include collaborative filtering, two-tower models, autoencoder-based models, sequential models, graph-based models, etc. To drive research in this direction, the BARS project aims to build an open benchmark for candidate item matching, which consists of:</p>
 
             <ul>
@@ -49,11 +48,11 @@
                         target="_blank">public datasets for research on candidate item matching</a>, and unique dataset
                     IDs to track specific data splits
                     for each dataset.</li>
-                <li>A collection of <a href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/libs" ,
+                <li>A list of <a href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/libs" ,
                         target="_blank">open-source libraries for candidate item matching</a>.</li>
                 <li>Most importantly, <a
                         href="https://openbenchmark.github.io/candidate-matching/leaderboard/amazonbooks_x0_001.html" ,
-                        target="_blank">the most comprehensive benchmarking results</a> on various datasets and settings. For each result, the detailed reproducing step is recorded along with the open-source benchmarking code.</li>
+                        target="_blank">the most comprehensive benchmarking results</a> on various models and datasets. For each result, the detailed reproducing step is recorded along with the open-source benchmarking scripts.</li>
             </ul>
 
             <p>The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.
