--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -34,8 +34,8 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">BarsMatch Leaderboard</h2>
-            <p><strong>BARS is an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
+            <h2 class="mb-4">BarsMatch Benchmark</h2>
+            
             <p>Recommender systems generally comprise two main stages, matching and ranking. As the first-stage task, candidate item matching is designed to efficiently retrieve hundreds of item candidates
                 out of the entire item corpus. Representative methods of candidate item matching include collaborative filtering, two-tower models, autoencoder-based models, sequential models, graph-based models, etc. To drive research in this direction, the BARS project aims to build an open benchmark for candidate item matching, which consists of:</p>
 
@@ -55,8 +55,7 @@
                         target="_blank">the most comprehensive benchmarking results</a> on various models and datasets. For each result, the detailed reproducing step is recorded along with the open-source benchmarking scripts.</li>
             </ul>
 
-            <p>The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.
-            </p>
+            <p><strong>BARS is a project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong> The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.</p>
         </div>
     </div>
     <script type="text/javascript" src="./js/nav.js"></script>
