--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -33,8 +33,8 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">BarsCTR Leaderboard</h2>
-            <p><strong>BARS is an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
+            <h2 class="mb-4">BarsCTR Benchmark</h2>
+            
             <p>Click-through rate (CTR) prediction (or user response prediction in general) is an important task in the ranking phase of recommender systems. The BARS project aims to build an open benchmark for CTR prediction, which consists of:</p>
 
             <ul>
@@ -44,7 +44,8 @@
                 <li><a href="https://openbenchmark.github.io/ctr-prediction/leaderboard/criteo_x4_001.html", target="_blank">The most comprehensive benchmarking results</a> on tens of SOTA models and datasets. For each result, the detailed reproducing step is available along with the open-source benchmarking scripts.</li>
             </ul>
 
-            <p>The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.</p>
+            <p><strong>BARS is a project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong> The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.</p>
+
         </div>
     </div>
     <script type="text/javascript" src="./js/nav.js"></script>
