--- a/BARS/index.html
+++ b/BARS/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="col-md-8 col-md-offset-2">
-                <img src="img/benchmark_pipeline.jpg" title="Open benchmarking pipeline">
+                <img src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@main/BARS/img/pipeline.jpg" title="Open benchmarking pipeline">
                 <div class="text-center" style="font-size:16px">Figure: Open benchmarking pipeline</div>
             </div>
             <div class="col-lg-10 col-lg-offset-1">
