--- a/ctr-prediction/leaderboard/avazu_x4_001.html
+++ b/ctr-prediction/leaderboard/avazu_x4_001.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BARS-CTR Benchmark | Avazu_x4_001</title>
+    <title>BarsCTR Benchmark | Avazu_x4_001</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -28,7 +28,7 @@
 
                 </ul>
                 <div class="mb-5">
-                    <img src="../../BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <img src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@main/BARS/img/wechat.jpg" title="Join Wechat Group">
                     <div style="padding-top:2px">
                     <div style="font-size:14px">Wechat Group</div></div>
                 </div>
