Update website to support jupyterbook

--- a/BarsMatch/leaderboard/amazonbooks_m1.html
+++ b/BarsMatch/leaderboard/amazonbooks_m1.html
@@ -34,18 +34,17 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on amazonbooks_x1</h2>
-            <p>See benchmark protocol: <a href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/datasets/Amazon#amazonbooks_x1">amazonbooks_x1</a><br></p>
+            <h2 class="mb-4">Benchmarking on amazonbooks_m1</h2>
+            <p>See benchmark protocol: <a href="https://github.com/openbenchmark/BARS/tree/master/datasets/Amazon#amazonbooks_m1">amazonbooks_m1</a><br></p>
             <!-- Add tables and charts -->
             <div id="chart1"></div>
             <p><br><i>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</i></p>
             <table id="table1" class="table table-bordered"></table>
-
         </div>
     </div>
     <script type="text/javascript" src="../js/nav.js"></script>
     <script type="text/javascript">
-        add_nav(page_name="amazonbooks_x1");
+        add_nav(page_name="amazonbooks_m1");
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script
