--- a/BarsMatch/leaderboard/gowalla_m1.html
+++ b/BarsMatch/leaderboard/gowalla_m1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BarsMatch Benchmark | Yelp18_m1</title>
+    <title>BarsMatch Benchmark | Gowalla_m1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,8 +34,8 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on yelp18_x1</h2>
-            <p>See benchmark protocol: <a href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/datasets/Yelp#yelp18_x1">yelp18_x1</a><br></p>
+            <h2 class="mb-4">Benchmarking on gowalla_m1</h2>
+            <p>See benchmark protocol: <a href="https://github.com/openbenchmark/BARS/tree/master/datasets/Gowalla#gowalla_m1">gowalla_m1</a><br></p>
             <!-- Add tables and charts -->
             <div id="chart1"></div>
             <p><br><i>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</i></p>
@@ -45,7 +45,7 @@
     </div>
     <script type="text/javascript" src="../js/nav.js"></script>
     <script type="text/javascript">
-        add_nav(page_name="yelp18_x1");
+        add_nav(page_name="gowalla_m1");
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script
@@ -61,8 +61,9 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/candidate_matching/leaderboard/yelp18_x1.json"));
+            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/candidate_matching/leaderboard/gowalla_x1.json"));
     </script>
+
 </body>
 
 </html>
