--- a/BarsCTR/index.html
+++ b/BarsCTR/index.html
@@ -1,61 +1,7 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <title>BarsCTR Benchmark</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
-    <meta name="robots" content="noindex, follow">
-</head>
-
-<body>
-    <div class="wrapper d-flex align-items-stretch">
-        <nav id="sidebar">
-            <div class="custom-menu">
-                <button type="button" id="sidebarCollapse" class="btn btn-primary">
-                  <i class="fa fa-bars"></i>
-                  <span class="sr-only">Toggle Menu</span>
-                </button>
-            </div>
-            <div class="p-4 pt-5">
-                <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
-                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
-                </ul>
-                <div class="mb-5">
-                    <img src="https://openbenchmark.github.io/BARS/img/wechat.jpg" title="Join Wechat Group">
-                    <div style="padding-top:2px">
-                    <div style="font-size:14px">Wechat Group</div></div>
-                </div>
-            </div>
-        </nav>
-
-        <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">BarsCTR Benchmark</h2>
-            
-            <p>Click-through rate (CTR) prediction (or user response prediction in general) is an important task in the ranking phase of recommender systems. The BARS project aims to build an open benchmark for CTR prediction, which consists of:</p>
-
-            <ul>
-                <li><a href="./papers.html">A curated list of CTR prediction models</a> which have been tagged into different topics, such as feature-interactions, behavior-sequence-modeling, multi-task learning, cross-domain modeling, AutoML, etc.</li>
-                <li><a href="https://github.com/openbenchmark/BARS/tree/master/datasets#datasets" , target="_blank">A collection of public datasets for CTR prediction research</a>, and unique dataset IDs to track specific data splits of each dataset.</li>
-                <li><a href="https://github.com/xue-pai/FuxiCTR", target="_blank">An open-source library for CTR prediction</a> with stunning features in configurablity, tunablity, and reproduciblity.</li>
-                <li><a href="https://openbenchmark.github.io/BarsCTR/leaderboard/criteo_x4_001.html", target="_blank">The most comprehensive benchmarking results</a> on tens of SOTA models and datasets. For each result, the detailed reproducing step is available along with the open-source benchmarking scripts.</li>
-            </ul>
-
-            <p><strong>BARS is a project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong> The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.</p>
-
-        </div>
-    </div>
-    <script type="text/javascript" src="./js/nav.js"></script>
-    <script type="text/javascript">
-        add_nav("CTR Prediction");
-    </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="./js/popper.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/main.js"></script>
-</body>
-
-</html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html> 
+<head> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
+<title>BarsCTR</title> <script src="javascripts/facebox.js" type="text/javascript"></script> <script language="javascript">location.replace("https://openbenchmark.github.io/BARS/ctr_prediction")</script> 
+</head> 
+<body></body> 
+</html> 
