--- a/BarsCTR/leaderboard/criteo_x1.html
+++ b/BarsCTR/leaderboard/criteo_x1.html
@@ -26,7 +26,7 @@
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul"></ul>
                 <div class="mb-5">
-                    <img src="https://openbenchmark.github.io/BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <img src="https://openbenchmark.github.io/BARS/_images/wechat.jpg" title="Join Wechat Group">
                     <div style="padding-top:2px">
                     <div style="font-size:14px">Wechat Group</div></div>
                 </div>
