--- a/BarsCTR/leaderboard/avazu_x4_001.html
+++ b/BarsCTR/leaderboard/avazu_x4_001.html
@@ -28,7 +28,7 @@
 
                 </ul>
                 <div class="mb-5">
-                    <img src="https://openbenchmark.github.io/BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <img src="https://openbenchmark.github.io/BARS/_images/wechat.jpg" title="Join Wechat Group">
                     <div style="padding-top:2px">
                     <div style="font-size:14px">Wechat Group</div></div>
                 </div>
