--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html> 
-<head> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
-<title></title> <script src="javascripts/facebox.js" type="text/javascript"></script> <script language="javascript">location.replace("https://openbenchmark.github.io/BARS")</script> 
-</head> 
-<body></body> 
-</html> 
+<!DOCTYPE html>
+<meta charset="utf-8">
+<meta http-equiv="refresh" content="0; URL=./BARS">
+<link rel="canonical" href="https://openbenchmark.github.io/BARS">
